--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
@@ -36,7 +39,17 @@
 
 <p>Abhishek 
 <br>+91 7416209726
-<br><a href="mailto:vemula.abhishek93@gmail.com">vemula.abhishek93@gmail.com</a></p>
+<br><a href="mailto:vemula.abhishek93@gmail.com">vemula.abhishek93@gmail.com</a>
+  <ul class="list-inline">
+                    <li><a href="https://www.facebook.com/7416209726" target="_blank"><i
+                            class="fa fa-facebook fa-fw fa-3x"></i></a></li>
+                    <li><a href="https://twitter.com/akhi@daring" target="_blank"><i
+                            class="fa fa-twitter fa-fw fa-3x"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/abhishekvemula" target="_blank"><i
+                            class="fa fa-linkedin-square fa-fw fa-3x"></i></a></li>
+                  
+                </ul>
+</p>
 
 </section>
 
