--- a/index.html
+++ b/index.html
@@ -38,12 +38,9 @@
 <br>+91 7416209726
 <br><a href="mailto:vemula.abhishek93@gmail.com">vemula.abhishek93@gmail.com</a>
   <ul class="list-inline">
-                    <li><a href="https://www.facebook.com/7416209726" target="_blank"><i
-                            class="fa fa-facebook fa-fw fa-3x"></i></a></li>
-                    <li><a href="https://twitter.com/akhi@daring" target="_blank"><i
-                            class="fa fa-twitter fa-fw fa-3x"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/abhishekvemula" target="_blank"><i
-                            class="fa fa-linkedin-square fa-fw fa-3x"></i></a></li>
+                    <li><a href="https://www.facebook.com/7416209726" target="_blank">@FB</a></li>
+                    <li><a href="https://twitter.com/akhi@daring" target="_blank">@TWIT</a></li>
+                    <li><a href="https://www.linkedin.com/in/abhishekvemula" target="_blank">@LI</a></li>
                   
                 </ul>
 </p>
