--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 
 <h3>
 <a id="skills" class="anchor" href="#skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills</h3>
+Programming Languages<br>
+Java, C, C++<br>
+Frontend Technologies<br>
+HTML, CSS, JavaScript, jQuery,Bootstrap<br>
+
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
