--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@ Programming Languages<br>
 Java, C, C++<br>
 Frontend Technologies<br>
 HTML, CSS, JavaScript, jQuery,Bootstrap<br>
-
+Databases<br>
+Oracle 10g, 11g, MySQL, SQL/PLSQL<br> 
+Operating Systems<br>
+Windows, Ubuntu, Mac OS<br>
+Tools
+Eclipse,NETBeans,xCode,Android Studio
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
