--- a/index.html
+++ b/index.html
@@ -30,16 +30,14 @@
 
 <h3>
 <a id="skills" class="anchor" href="#skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills</h3>
-Programming Languages<br>
-Java, C, C++<br>
-Frontend Technologies<br>
-HTML, CSS, JavaScript, jQuery,Bootstrap<br>
-Databases<br>
-Oracle 10g, 11g, MySQL, SQL/PLSQL<br> 
-Operating Systems<br>
-Windows, Ubuntu, Mac OS<br>
-Tools
-Eclipse,NETBeans,xCode,Android Studio
+<table>
+  <tr><td>Programming Languages</td><td>Java, C, C++</td></tr>
+  <tr><td>Frontend Technologies</td><td>HTML, CSS, JavaScript, jQuery,Bootstrap</td></tr>
+  <tr><td>Databases</td><td>Oracle 10g, 11g, MySQL, SQL/PLSQL</td></tr>
+  <tr><td>Tools</td><td>Eclipse,NETBeans,xCode,Android Studio</td></tr>
+  <tr><td>Operating Systems</td><td>Windows, Ubuntu, Mac OS</td></tr>
+</table>
+
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
