--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
 <h3>
 <a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
-
+Osmania University
+Bachelors in Computer Science 
+October, 2010 - May, 2014 
+GPA - 4/4
 <h3>
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects</h3>
 
