--- a/index.html
+++ b/index.html
@@ -8,11 +8,54 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+  <style>
+  #menu {
+    width: 550px;
+    height: 35px;
+    font-size: 16px;
+    font-family: Tahoma, Geneva, sans-serif;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 3px 2px 3px #333333;
+    background-color: #8AD9FF;
+        border-radius: 8px;
+}
+#menu ul {
+    height: auto;
+    padding: 8px 0px;
+    margin: 0px;
+}
+#menu li { 
+display: inline; 
+padding: 20px; 
+}
+#menu a {
+    text-decoration: none;
+    color: #00F;
+    padding: 8px 8px 8px 8px;
+}
+#menu a:hover {
+    color: #F90;
+    background-color: #FFF;
+}
+
+</style>
   </head>
+  
   <body>
     <section class="page-header">
       <h1 class="project-name">Abhishek Vemula</h1>
       <h2 class="project-tagline">Do your Duty and Disappear</h2>
+    <div id="menu">
+<ul>
+<li><a href="work-experience">WorkExperience</a></li>
+<ul><li><a href="education">Education</a></li>
+<li><a href="projects">Projects</a></li>
+<li><a href="skills">Skills</a></li>
+<li><a href="support-or-contact">Contact Us</a></li>
+
+</ul>
+</div>
     </section>
 
     <section class="main-content">
