--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ padding: 20px;
     <div id="menu">
 <ul>
 <li><a href="work-experience">WorkExperience</a></li>
-<ul><li><a href="education">Education</a></li>
+<li><a href="education">Education</a></li>
 <li><a href="projects">Projects</a></li>
 <li><a href="skills">Skills</a></li>
 <li><a href="support-or-contact">Contact Us</a></li>
