--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@ padding: 20px;
       <h2 class="project-tagline">Do your Duty and Disappear</h2>
     <div id="menu">
 <ul>
-<li><a href="work-experience">WorkExperience</a></li>
-<li><a href="education">Education</a></li>
-<li><a href="projects">Projects</a></li>
-<li><a href="skills">Skills</a></li>
-<li><a href="support-or-contact">Contact Us</a></li>
+<li><a href="#work-experience">WorkExperience</a></li>
+<li><a href="#education">Education</a></li>
+<li><a href="#projects">Projects</a></li>
+<li><a href="#skills">Skills</a></li>
+<li><a href="#support-or-contact">Contact Us</a></li>
 
 </ul>
 </div>
