--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@ padding: 20px;
 }
 #menu a {
     text-decoration: none;
-    color: #00F;
+    color: White;
     padding: 8px 8px 8px 8px;
 }
 #menu a:hover {
     color: #F90;
-    background-color: #FFF;
 }
 
 </style>
@@ -64,6 +63,12 @@ padding: 20px;
 
 <h3>
 <a id="work-experience" class="anchor" href="#work-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Work Experience</h3>
+Systems Engineer at Infosys with 1.5 Years of  total experience.
+<ul><li>1 year experience in Cable.</li>
+<li>Good experience in Testing and Automation.</li>
+<li>Good knowledge on IOS UI and Android UI Development.</li>
+
+</ul>
 
 <h3>
 <a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
@@ -73,6 +78,14 @@ October, 2010 - May, 2014
 GPA - 4/4
 <h3>
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects</h3>
+<ul>
+  <li>Devlopment of BE Portal and Subcon Portal</li>
+  <li>In Devlopment Automation Tool of Utility and MTBF for comcast</li>
+  <li>Functional Testing of Scripts/UI, Debugging the Test Script/UI errors and Bug Fixing</li>
+  
+</ul>
+  
+  Test Automation of MTBF and Utility features.
 
 <h3>
 <a id="skills" class="anchor" href="#skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills</h3>
