--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ padding: 20px;
 <li><a href="#education">Education</a></li>
 <li><a href="#projects">Projects</a></li>
 <li><a href="#skills">Skills</a></li>
-<li><a href="#support-or-contact">Contact Us</a></li>
+<li><a href="#support-or-contact">Contact Me</a></li>
 
 </ul>
 </div>
