--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ padding: 20px;
   </head>
   
   <body>
-    <section class="page-header" id="top">
+    <section class="page-header" id="#top">
       <h1 class="project-name">Abhishek Vemula</h1>
       <h2 class="project-tagline">Do your Duty and Disappear</h2>
     <div id="menu">
