--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ GPA - 4/4
 <br><a href="mailto:vemula.abhishek93@gmail.com">vemula.abhishek93@gmail.com</a>
 
 </p>
-<a href="top">Back to Top</a>
+<a href="#top">Back to Top</a>
 </section>
 
   
