--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@ padding: 20px;
   </head>
   
   <body>
-    <section class="page-header" id="#top">
+    <section class="page-header" id="#top" data-position="fixed">
       <h1 class="project-name">Abhishek Vemula</h1>
-      <h2 class="project-tagline">Do your Duty and Disappear</h2>
     <div id="menu">
 <ul>
 <li><a href="#work-experience">WorkExperience</a></li>
