--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ padding: 20px;
   </head>
   
   <body>
-    <section class="page-header" id="#top" style="position: fixed; height:150px">
+    <section class="page-header" id="#top" >
       <h1 class="project-name">Abhishek Vemula</h1>
     <div id="menu">
 <ul>
